--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,24 @@
-Package: lakehouse
-Title: nflverse data storage
-Version: 0.0.0.9000
+Package: nflversedata
+Title: nflverse data storage functions
+Version: 0.0.1
 Authors@R: 
     person("Tan", "Ho", , "tan@tanho.ca", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-8388-5155"))
-Description: This repository holds automated data releases for nflverse projects. 
+Description: This repository holds automated data releases for nflverse
+    projects and helper functions for managing the uploads.
 License: CC BY 4.0
+URL: https://github.com/nflverse/nflverse-data
+BugReports: https://github.com/nflverse/nflverse-data/issues
+Depends: 
+    R (>= 4.1.0)
+Imports: 
+    cli,
+    gh (>= 1.3.0),
+    glue (>= 1.5.0),
+    httr (>= 1.4.0),
+    jsonlite (>= 1.7.0),
+    piggyback (>= 0.1.1)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-Imports: 
-    piggyback
-URL: https://github.com/tanho63/lakehouse
-BugReports: https://github.com/tanho63/lakehouse/issues
