--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: nflversedata
 Title: nflverse data storage functions
-Version: 0.0.2
+Version: 0.0.3
 Authors@R: 
     person("Tan", "Ho", , "tan@tanho.ca", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-8388-5155"))
@@ -12,12 +12,15 @@ BugReports: https://github.com/nflverse/nflverse-data/issues
 Depends: 
     R (>= 4.1.0)
 Imports: 
-    cli,
+    cli (>= 3.2.0),
     gh (>= 1.3.0),
     glue (>= 1.5.0),
     httr (>= 1.4.0),
     jsonlite (>= 1.7.0),
-    piggyback (>= 0.1.1)
+    piggyback (>= 0.1.1),
+    arrow (>= 5.0.0),
+    qs (>= 0.25.1),
+    data.table (>= 1.14.0)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
