--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: nflversedata
 Title: nflverse data storage functions
-Version: 0.0.6
+Version: 0.0.7
 Authors@R: 
     person("Tan", "Ho", , "tan@tanho.ca", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-8388-5155"))
@@ -12,20 +12,22 @@ BugReports: https://github.com/nflverse/nflverse-data/issues
 Depends: 
     R (>= 4.1.0)
 Imports: 
+    arrow (>= 5.0.0),
     cli (>= 3.2.0),
+    data.table (>= 1.14.0),
+    fs,
     gh (>= 1.3.0),
     glue (>= 1.5.0),
     httr (>= 1.4.0),
     jsonlite (>= 1.7.0),
-    piggyback (>= 0.1.2.9001),
-    arrow (>= 5.0.0),
-    qs (>= 0.25.1),
-    data.table (>= 1.14.0),
+    memoise,
     nflreadr,
-    fs
+    piggyback (>= 0.1.2.9001),
+    purrr (>= 0.3.4),
+    qs (>= 0.25.1),
+    rlang
 Remotes: 
     ropensci/piggyback
 Encoding: UTF-8
-LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.1
