--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: nflversedata
 Title: nflverse data storage functions
-Version: 0.0.7
+Version: 0.0.8
 Authors@R: 
     person("Tan", "Ho", , "tan@tanho.ca", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-8388-5155"))
@@ -21,13 +21,11 @@ Imports:
     httr (>= 1.4.0),
     jsonlite (>= 1.7.0),
     memoise,
-    nflreadr,
-    piggyback (>= 0.1.2.9001),
+    nflreadr (>= 1.3.0),
+    piggyback (>= 0.1.4),
     purrr (>= 0.3.4),
     qs (>= 0.25.1),
     rlang
-Remotes: 
-    ropensci/piggyback
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
