--- a/.github/workflows/run_archive.yaml
+++ b/.github/workflows/run_archive.yaml
@@ -1,7 +1,9 @@
 on:
   schedule:
-    # “At 15:15 on day-of-month 15 every month.”
-    - cron: '15 15 15 * *'
+    # At 15:15 on Thursdays every week in Sep - Jan
+    - cron: '15 15 * 9-12,1 4'
+    # At 15:15 on the 15th day of each month from Feb -> Aug
+    - cron: '15 15 15 2-8 *'    
   workflow_dispatch:
 
 name: archive_nflversedata
