--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,6 +9,22 @@ jobs:
     name: create_release
     env:
       GH_TOKEN: ${{ secrets.NFLVERSE_GH_TOKEN }}
+    outputs:
+      releases: ${{ steps.step1.outputs }}
     steps:
-      - name: Create Release with gh
-        run: gh release create archive-test-$(date '+%Y-%m-%d') -R nflverse/nflverse-data-archives
+#      - name: Create Release with gh
+#        run: gh release create archive-test-$(date '+%Y-%m-%d') -R nflverse/nflverse-data-archives
+       - id: query_releases
+         run: gh release list -R nflverse/nflverse-data --exclude-drafts --json tagName --jq '[.[].tagName]' > ${{ GITHUB_OUTPUT}}
+  do_things:
+    runs-on: ubuntu-latest
+    needs: create_release
+    name: ${{ matrix.release }}
+    strategy:
+      matrix:
+        release: ${{ fromJson(needs.create_release.outputs.releases) }}
+    steps:
+      - env:
+          RELEASE_TAG: ${{ matrix.release }}
+        run: echo "$RELEASE_TAG"
+       
