--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,7 +15,7 @@ jobs:
 #      - name: Create Release with gh
 #        run: gh release create archive-test-$(date '+%Y-%m-%d') -R nflverse/nflverse-data-archives
        - id: query_releases
-         run: releases=$(gh release list -R nflverse/nflverse-data --exclude-drafts --json tagName --jq '[.[].tagName]') > $GITHUB_OUTPUT
+         run: echo "releases=$(gh release list -R nflverse/nflverse-data --exclude-drafts --json tagName --jq '[.[].tagName]')" > $GITHUB_OUTPUT
   do_things:
     runs-on: ubuntu-latest
     needs: create_release
