--- a/.github/workflows/run_archive.yaml
+++ b/.github/workflows/run_archive.yaml
@@ -30,19 +30,18 @@ jobs:
   archive_nflversedata:
     needs: create_release
     runs-on: ${{ matrix.config.os }}
-    name: Archive ${{ matrix.tag }} under ${{ matrix.archive_tag }}
+    name: Archive ${{ matrix.tag }} under ${{ needs.create_release.outputs.release_tag }}
     strategy:
       fail-fast: false
       matrix:
         config:
           - {os: ubuntu-22.04,   r: 'release'}
         tag: ${{ fromJson(needs.create_release.outputs.releases) }}
-        archive_tag: ${{ needs.create_release.outputs.release_tag }}
     env:
       GITHUB_PAT: ${{ secrets.NFLVERSE_GH_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
       NFLVERSE_ARCHIVE_TAG: ${{ matrix.tag }}
-      NFLVERSE_ARCHIVE_TO: ${{ matrix.archive_tag }}
+      NFLVERSE_ARCHIVE_TO: ${{ needs.create_release.outputs.release_tag }}
 
     steps:
       - uses: actions/checkout@v4
