gotta install the package smh

--- a/.github/workflows/run_archive.yaml
+++ b/.github/workflows/run_archive.yaml
@@ -55,6 +55,7 @@ jobs:
         with:
           cache-version: 1
           extra-packages: |
+            local::.
             ropensci/piggyback
             nflverse/nflreadr
 
