--- a/.github/workflows/run_archive.yaml
+++ b/.github/workflows/run_archive.yaml
@@ -16,16 +16,21 @@ jobs:
       GH_TOKEN: ${{ secrets.NFLVERSE_GH_TOKEN }}
     outputs:
       releases: ${{ steps.query_releases.outputs.releases }}
+      release_tag: ${{ steps.create_tag.outputs.release_tag }}
     steps:
       - name: Create release with gh
-        run: gh release create archive-$(date '+%Y-%m-%d') -t archive-$(date '+%Y-%m-%d') -R nflverse/nflverse-data-archives || true
+        id: create_tag
+        run: |
+          release_tag=archive-$(date '+%Y-%m-%d')
+          gh release create $release_tag -t $release_tag -R nflverse/nflverse-data-archives || true
+          echo "release_tag=$release_tag" >> "$GITHUB_OUTPUT"
       - id: query_releases
         run: echo "releases=$(gh release list -R nflverse/nflverse-data --exclude-drafts --json tagName --jq '[.[].tagName]')" > $GITHUB_OUTPUT
 
   archive_nflversedata:
     needs: create_release
     runs-on: ${{ matrix.config.os }}
-    name: ${{ matrix.tag }}
+    name: Archive ${{ matrix.tag }} under ${{ needs.create_release.outputs.release_tag }}
     strategy:
       fail-fast: false
       matrix:
@@ -34,25 +39,26 @@ jobs:
         tag: ${{ fromJson(needs.create_release.outputs.releases) }}
     env:
       GITHUB_PAT: ${{ secrets.NFLVERSE_GH_TOKEN }}
+      GH_TOKEN: ${{ secrets.NFLVERSE_GH_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
       NFLVERSE_ARCHIVE_TAG: ${{ matrix.tag }}
+      NFLVERSE_ARCHIVE_TO: ${{ needs.create_release.outputs.release_tag }}
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
-          http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           cache-version: 1
           extra-packages: |
+            local::.
             ropensci/piggyback
-            r-lib/pkgload
             nflverse/nflreadr
 
-      - name: Archive nflverse release
+      - name: Archive nflverse release ${{ matrix.tag }}
         run: Rscript -e "source('dev/run_archive.R')"
