--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,21 @@
 Package: nflversedata
 Title: nflverse data storage functions
-Version: 0.0.12
-Authors@R: 
+Version: 0.0.13
+Authors@R:c(
     person("Tan", "Ho", , "tan@tanho.ca", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0001-8388-5155"))
+           comment = c(ORCID = "0000-0001-8388-5155")),
+    person("Sebastian", "Carl", , "mrcaseb@gmail.com", role = "aut")
+  )
 Description: This repository holds automated data releases for nflverse
     projects and helper functions for managing the uploads.
 License: CC BY 4.0
 URL: https://github.com/nflverse/nflverse-data
 BugReports: https://github.com/nflverse/nflverse-data/issues
-Depends: 
+Depends:
     R (>= 4.4.0)
-Imports: 
+Imports:
     arrow (>= 5.0.0),
+    aws.s3,
     cli (>= 3.2.0),
     data.table (>= 1.14.0),
     fs,
