--- a/.github/workflows/run_archive.yaml
+++ b/.github/workflows/run_archive.yaml
@@ -75,7 +75,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: r-lib/actions/setup-r@v2
         with:
-          r-version: ${{ matrix.config.r }}
+          r-version: release
           use-public-rspm: true
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
