--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ Imports:
     glue (>= 1.5.0),
     httr (>= 1.4.0),
     jsonlite (>= 1.7.0),
+    logger,
     memoise,
     nflreadr (>= 1.3.0),
     piggyback (>= 0.1.4),
