--- a/.github/workflows/run_archive.yaml
+++ b/.github/workflows/run_archive.yaml
@@ -43,15 +43,12 @@ jobs:
       R_KEEP_PKG_SOURCE: yes
       NFLVERSE_ARCHIVE_TAG: ${{ matrix.tag }}
       NFLVERSE_ARCHIVE_TO: ${{ needs.create_release.outputs.release_tag }}
-
     steps:
       - uses: actions/checkout@v4
-
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
           use-public-rspm: true
-
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           cache-version: 1
@@ -59,6 +56,5 @@ jobs:
             local::.
             ropensci/piggyback
             nflverse/nflreadr
-
       - name: Archive nflverse release ${{ matrix.tag }}
-        run: Rscript -e "source('dev/run_archive.R')"
+        run: Rscript dev/run_archive.R
