--- a/.github/workflows/run_archive.yaml
+++ b/.github/workflows/run_archive.yaml
@@ -32,6 +32,7 @@ jobs:
     runs-on: ${{ matrix.config.os }}
     name: Archive ${{ matrix.tag }} under ${{ needs.create_release.outputs.release_tag }}
     strategy:
+      max-parallel: 8
       fail-fast: false
       matrix:
         config:
