--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,8 @@ Imports:
     rlang
 Suggests:
     minioclient
+Remotes:
+    qsbase/qs
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
